tests/typing/error-shadow/builtin-term-var.expected
File "tests/typing/error-shadow/builtin-term-var.smt2", line 2, character 15-19:
Error Shadowing: true was already defined by a builtin theory
