tests/typing/error-shadow/builtin-term-var.smt2
(set-logic QF_UF)
(assert (let ((true false)) true))
(check-sat)
